[Fix]text_field,area部分のpadding追加。改行や空白を表示させられるようにwhite-space: pre-wrap;追加

--- a/app/assets/stylesheets/comments.scss
+++ b/app/assets/stylesheets/comments.scss
@@ -44,6 +44,9 @@
 .comment-show {
   width: 100%;
   margin-left: 0.5rem;
+  p {
+    white-space: pre-wrap;
+  }
 }
 
 .user-image-shape {
@@ -63,6 +66,10 @@
 .comment-content {
   display: flex;
   margin-bottom: 1rem;
+}
+
+.comment-text-area {
+  padding: 0.3rem;
 }
 
 .comment-action input {
